# workout-api

./: .gitignore  Cargo.toml  README.md
migrations/2023-10-18-191619_create_exercise/: down.sql  up.sql
src/: main.rs  schema.rs
src/features/exercises/: get_all_exercises.rs  mod.rs  routes.rs
src/guards/: jwt_guard.rs  mod.rs
src/helpers/: jwt_helper.rs  mod.rs  routes_helper.rs
src/infrastructure/: mediator.rs  mod.rs  persistence.rs
src/middleware/: authorization.rs  cors.rs  mod.rs
src/models/: dtos.rs
