[package]
name = "workout-api"
version = "0.1.0"
edition = "2021"
authors = ["Rogerson Nazario"]
description = "Simple API for register and retrieve workouts"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.180", features = ["derive"] }
mediator = {version = "0.2", features = ["async"]}
chrono = "0.4.26"
jsonwebtoken = "9"
dateparser = "0.2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.17.1"
base64 = "0.21.4"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
regex = "1.9.5"
once_cell = "1.18.0"
teloxide = { version = "0.12", features = ["macros"] }
